--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "angular-quickstart",
+  "name": "NASAapp",
   "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "build": "tsc -p src/",
     "build:watch": "tsc -p src/ -w",
