--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@angular/router": "~4.3.4",
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
-    "ng2-slider-component": "^1.0.9",
+    "ng2-nouislider": "^1.6.1",
+    "nouislider": "^9.0.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
